# extraction

./: .env.example  .flake8  .gitignore  AGENTS.md  ARCHITECTURE.md  ARCHITECTURE_CLEANUP.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: CODEOWNERS
.playwright-mcp/: page-2026-07-05T23-53-17-796Z.yml  page-2026-07-06T01-18-47-853Z.yml  page-2026-07-06T01-19-16-310Z.yml  page-snapshot.md
app/: config.py  db.py  main.py  schemas.py  worker.py
content_pipeline/: __init__.py  cli_bridge.py
docs/: BENCHMARK_ONTOLOGY_V1.md  OWNERS.md  backend_extraction_flow.md  content_pipeline_llm_architecture.md  sqlite-to-postgresql-migration.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
migrations/: env.py
prompts/: image_profile_classifier.md  quantitative_metric_extractor.md
scripts/: batch_mineru_parse.py  check_architecture_boundaries.py  check_file_limits.py  cli.py  import_to_webui.py  migrate_sqlite_to_postgres.py  rerun_no_planner.py  restore_pipeline_data.py  run_all_papers.py  run_full_backend.py  run_pipeline_demo.py
tests/: conftest.py  test_all_extraction_schemas.py  test_architecture_contracts.py  test_audit_table_chart_fact_records.py  test_batch_integration.py  test_batch_postgresql_acceptance.py  test_batch_processing.py  test_content_pipeline_blocks.py  test_content_pipeline_cli.py  test_content_pipeline_e2e.py  test_content_pipeline_graph.py  test_content_pipeline_llm_contract.py  test_content_pipeline_panel_markers.py  test_no_domain_hardcoded_keywords.py  (+7 more)
(+127 files in other folders)
