[project]
name = "extraction-service"
version = "0.1.0"
description = "PDF content extraction service"
requires-python = ">=3.11"
dependencies = [
    "alembic==1.16.4",
    "boto3>=1.40.0",
    "duckdb>=1.3.2",
    "fastapi==0.136.1",
    "httpx==0.28.1",
    "jsonschema==4.25.1",
    "openpyxl>=3.1.5",
    "pillow==11.3.0",
    "psycopg[binary]>=3.2.9",
    "pyarrow>=21.0.0",
    "pydantic==2.13.3",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.27",
    "rich>=14.1.0",
    "redis==5.0.3",
    "sqlalchemy==2.0.49",
    "typer>=0.16.0",
    "uvicorn==0.46.0",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "pytest==8.4.2",
    "pytest-cov>=6.2.1",
    "pydeps>=3.0.1",
    "ruff>=0.12.0",
    "vulture>=2.14",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["postgresql: requires TEST_POSTGRES_URL and a dedicated PostgreSQL database"]

[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["E402"]
